<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/comments_Author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/author"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/comments_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:lineSpacingExtra="10sp"
        android:text="@string/text"
        android:textSize="16sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/comments_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/date"
        android:textSize="12sp"
        android:typeface="serif" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="20dp"
        android:background="@color/line" />

</LinearLayout>