<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/imageContain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">


            <ImageView
                android:id="@+id/mySub_list_imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_mySub_list"
                android:cropToPadding="false"
                android:scaleType="centerInside"
                android:src="@drawable/icon"
                android:visibility="visible" />

            <TextView
                android:id="@+id/mySub_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/mySub_list_imageView"
                android:layout_toRightOf="@+id/mySub_list_imageView"
                android:maxLines="1"
                android:text="@string/group"
                android:textSize="@dimen/group_textSize"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/mySub_list_Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/mySub_group"
                android:layout_alignStart="@+id/mySub_group"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:text="@string/author"
                android:textSize="@dimen/author_textSize"
                app:fontFamily="sans-serif" />

            <TextView
                android:id="@+id/mySub_list_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/mySub_list_imageView"
                android:layout_alignLeft="@+id/mySub_list_Subtitle"
                android:layout_alignStart="@+id/mySub_list_Subtitle"
                android:text="@string/data"
                android:textSize="@dimen/data_textSize"
                app:fontFamily="sans-serif" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">


            <TextView
                android:id="@+id/mySub_list_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/title"
                android:textSize="@dimen/title_textSize"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />
        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>