<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wiget_color"
    android:orientation="vertical"
    tools:context=".fragments.SearchFragment"
    tools:ignore="Overdraw">

    <LinearLayout
        android:id="@+id/mLineaLayoutSearch"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <include layout="@layout/main_toolbar"/>


    <LinearLayout
        android:id="@+id/SearchbuttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/SearchDefaultButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/home"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/SearchNewButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/new_search"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/SearchPopularButton"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_style"
            android:text="@string/popular"
            android:textColor="@color/black" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressSearch"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/searchRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
</android.support.v4.widget.SwipeRefreshLayout>