<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:paddingLeft="10dp"
    android:layout_marginBottom="15dp"
    android:paddingRight="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="15dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/search_list_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="10dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            android:contentDescription="@string/image_search_list" />


        <Button
            android:id="@+id/imageButtonSearchList"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_image" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/search_list_imageView"
            android:layout_toRightOf="@+id/search_list_imageView"
            android:layout_toStartOf="@id/imageButtonSearchList"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@id/imageButtonSearchList">


            <TextView
                android:id="@+id/search_list_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                android:text="@string/title"
                android:textSize="16sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/search_list_Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search_list_Title"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/author"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>